src/tests/variable-declarations/multi-arrays-pointers.txt
variable-declarations/multi-arrays-pointers.c:17:10: error: incompatible types when initializing type 'char' using type 'int *'
     char aa = a;
          ^
variable-declarations/multi-arrays-pointers.c:18:10: error: incompatible types when initializing type 'char' using type 'int **'
     char bb = b;
          ^
variable-declarations/multi-arrays-pointers.c:19:10: error: incompatible types when initializing type 'char' using type 'int (*)[2]'
     char cc = c;
          ^
variable-declarations/multi-arrays-pointers.c:20:10: error: incompatible types when initializing type 'char' using type 'int *(*)[3]'
     char dd = d;
          ^
variable-declarations/multi-arrays-pointers.c:21:10: error: incompatible types when initializing type 'char' using type 'int (**)[3]'
     char ee = e;
          ^
variable-declarations/multi-arrays-pointers.c:22:10: error: incompatible types when initializing type 'char' using type 'int *(**)[3]'
     char ff = f;
          ^
variable-declarations/multi-arrays-pointers.c:23:10: error: incompatible types when initializing type 'char' using type 'int ***(*)[3][4]'
     char gg1 = g1;
          ^
variable-declarations/multi-arrays-pointers.c:24:10: error: incompatible types when initializing type 'char' using type 'int ***(*)[3][4]'
     char gg2 = g2;
          ^
variable-declarations/multi-arrays-pointers.c:25:10: error: incompatible types when initializing type 'char' using type 'int ***(*)[3][4]'
     char gg3 = g3;
          ^
variable-declarations/multi-arrays-pointers.c:26:10: error: incompatible types when initializing type 'char' using type 'int **(*)[2][3][4]'
     char hh = h;
          ^
variable-declarations/multi-arrays-pointers.c:27:10: error: incompatible types when initializing type 'char' using type 'int *(**(*)[3])[4]'
     char ii = i;
          ^
variable-declarations/multi-arrays-pointers.c:28:10: error: incompatible types when initializing type 'char' using type 'int (*(*(*)[2])[3])[4]'
     char jj = j;
          ^
